# diagram-client

./: .gitignore  CHANGELOG.md  CIAO-PRINCIPLES.md  README.md  RECOMMENDATION.md  SECURITY.md  build.sh  build.xml  meson.build  project.ini  project.sh
docs/: ant-steps.md  basic-steps.md  build-methods.md  gnu-make-steps.md  gradle-steps.md  meson-steps.md
src/main/c/: dialog_version.c  main.c  menu_bookmark.c  menu_bookmark.h  menu_bookmark_diagram.c  menu_bookmark_diagram.h  project.h  url_bar.c
